browser/themes/shared/customizableui/panelUI.inc.css
/* ... */
#
confirmation
-
hint
-
checkmark
-
animation
-
container
{
position
:
relative
;
overflow
:
hidden
;
width
:
14px
;
height
:
14px
;
}
#
confirmation
-
hint
.
with
-
description
#
confirmation
-
hint
-
checkmark
-
animation
-
container
{
display
:
none
;
}
#
confirmation
-
hint
-
checkmark
-
animation
-
container
[
animate
]
>
#
confirmation
-
hint
-
checkmark
-
image
{
display
:
block
;
position
:
absolute
;
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
check
-
animation
.
svg
)
;
background
-
repeat
:
no
-
repeat
;
min
-
width
:
266px
;
max
-
width
:
266px
;
min
-
height
:
14px
;
max
-
height
:
14px
;
animation
-
name
:
confirmation
-
hint
-
checkmark
-
animation
;
animation
-
duration
:
300ms
;
animation
-
delay
:
60ms
;
animation
-
fill
-
mode
:
forwards
;
animation
-
timing
-
function
:
steps
(
18
)
;
}
#
confirmation
-
hint
-
checkmark
-
animation
-
container
[
animate
]
>
#
confirmation
-
hint
-
checkmark
-
image
:
-
moz
-
locale
-
dir
(
rtl
)
{
animation
-
name
:
confirmation
-
hint
-
checkmark
-
animation
-
rtl
;
transform
:
translateX
(
252px
)
;
}
keyframes
confirmation
-
hint
-
checkmark
-
animation
{
from
{
transform
:
translateX
(
0
)
;
}
to
{
transform
:
translateX
(
-
252px
)
;
}
}
keyframes
confirmation
-
hint
-
checkmark
-
animation
-
rtl
{
from
{
transform
:
translateX
(
252px
)
;
}
to
{
transform
:
translateX
(
0
)
;
}
}
#
confirmation
-
hint
-
message
{
margin
-
inline
-
start
:
7px
;
margin
-
inline
-
end
:
0
;
}
#
confirmation
-
hint
.
with
-
description
#
confirmation
-
hint
-
message
{
font
-
size
:
1
.
2em
;
font
-
weight
:
600
;
}
#
confirmation
-
hint
-
message
-
container
{
transform
:
scale
(
.
8
)
;
opacity
:
0
;
transition
:
transform
120ms
cubic
-
bezier
(
.
25
1
.
27
.
35
1
.
18
)
opacity
60ms
linear
;
}
#
confirmation
-
hint
-
checkmark
-
animation
-
container
[
animate
]
+
#
confirmation
-
hint
-
message
-
container
{
transform
:
scale
(
1
)
;
opacity
:
1
;
}
panelview
[
id
^
=
PanelUI
-
webext
-
]
{
overflow
:
hidden
;
}
panelview
:
not
(
[
mainview
]
)
.
toolbarbutton
-
text
.
cui
-
widget
-
panel
toolbarbutton
:
not
(
[
wrap
]
)
>
.
toolbarbutton
-
text
#
overflowMenu
-
customize
-
button
>
.
toolbarbutton
-
text
{
text
-
align
:
start
;
display
:
-
moz
-
box
;
}
.
cui
-
widget
-
panel
.
cui
-
widget
-
panel
:
:
part
(
arrowcontent
)
{
-
-
arrowpanel
-
padding
:
4px
0
;
}
#
appMenu
-
popup
panelview
#
customizationui
-
widget
-
multiview
panelview
:
not
(
[
extension
]
)
{
min
-
width
:
menuPanelWidth
;
max
-
width
:
35em
;
}
#
customizationui
-
widget
-
multiview
#
appMenu
-
libraryView
#
pageActionPanel
panelview
#
widget
-
overflow
panelview
{
min
-
width
:
wideMenuPanelWidth
;
max
-
width
:
wideMenuPanelWidth
;
}
#
appMenu
-
popup
[
touchmode
]
panelview
{
min
-
width
:
calc
(
menuPanelWidth
+
32px
)
;
}
.
cui
-
widget
-
panel
.
cui
-
widget
-
panelWithFooter
:
:
part
(
arrowcontent
)
{
padding
-
bottom
:
0
;
}
.
toolbaritem
-
combined
-
buttons
inAnyPanel
>
toolbarbutton
>
.
toolbarbutton
-
icon
{
min
-
width
:
0
;
min
-
height
:
0
;
margin
:
0
;
}
.
animate
-
out
{
animation
-
name
:
widget
-
animate
-
out
;
animation
-
fill
-
mode
:
forwards
;
animation
-
duration
:
500ms
;
animation
-
timing
-
function
:
var
(
-
-
animation
-
easing
-
function
)
;
}
keyframes
widget
-
animate
-
out
{
0
%
{
opacity
:
1
;
transform
:
scale
(
1
)
;
}
100
%
{
opacity
:
0
;
transform
:
scale
(
.
5
)
;
}
}
toolbarpaletteitem
[
place
=
"
menu
-
panel
"
]
>
.
toolbarbutton
-
1
{
-
moz
-
box
-
flex
:
1
;
}
toolbarpaletteitem
[
place
=
"
palette
"
]
>
toolbarbutton
[
constrain
-
size
=
"
true
"
]
>
.
toolbarbutton
-
icon
toolbarpaletteitem
[
place
=
"
palette
"
]
>
toolbarbutton
[
constrain
-
size
=
"
true
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
icon
toolbarbutton
[
constrain
-
size
=
"
true
"
]
[
cui
-
areatype
=
"
menu
-
panel
"
]
>
.
toolbarbutton
-
icon
toolbarbutton
[
constrain
-
size
=
"
true
"
]
[
cui
-
areatype
=
"
menu
-
panel
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
icon
{
height
:
panelPaletteIconSize
;
width
:
panelPaletteIconSize
;
}
#
customization
-
palette
.
toolbarbutton
-
1
{
-
moz
-
appearance
:
none
;
-
moz
-
box
-
orient
:
vertical
;
padding
:
12px
0
9px
;
margin
:
0
;
}
.
customization
-
palette
.
toolbarbutton
-
1
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
icon
{
width
:
panelPaletteIconSize
;
height
:
panelPaletteIconSize
;
min
-
width
:
panelPaletteIconSize
;
min
-
height
:
panelPaletteIconSize
;
margin
:
0
;
padding
:
0
;
}
#
zoom
-
in
-
button
>
.
toolbarbutton
-
text
#
zoom
-
out
-
button
>
.
toolbarbutton
-
text
#
zoom
-
reset
-
button
>
.
toolbarbutton
-
icon
{
display
:
none
;
}
.
addon
-
banner
-
item
:
:
after
.
panel
-
banner
-
item
:
:
after
{
content
:
"
"
;
width
:
16px
;
height
:
16px
;
margin
-
inline
-
start
:
10px
;
margin
-
inline
-
end
:
12px
;
display
:
-
moz
-
box
;
}
.
addon
-
banner
-
item
{
background
-
color
:
appmenuWarningBackgroundColor
;
color
:
appmenuWarningColor
;
border
-
top
:
1px
solid
appmenuWarningBorderColor
!
important
;
display
:
flex
;
flex
:
1
1
0
%
;
width
:
calc
(
menuPanelWidth
+
30px
)
;
padding
-
inline
-
start
:
15px
;
border
-
inline
-
start
-
style
:
none
;
-
moz
-
image
-
region
:
rect
(
0
16px
16px
0
)
;
}
.
addon
-
banner
-
item
:
last
-
child
{
border
-
bottom
:
1px
solid
appmenuWarningBorderColor
;
}
.
addon
-
banner
-
item
:
focus
.
addon
-
banner
-
item
:
hover
{
background
-
color
:
appmenuWarningBackgroundColorHover
;
}
.
addon
-
banner
-
item
:
hover
:
active
{
background
-
color
:
appmenuWarningBackgroundColorActive
;
}
.
addon
-
banner
-
item
>
.
toolbarbutton
-
icon
{
width
:
16px
;
height
:
16px
;
}
.
addon
-
banner
-
item
:
:
after
{
background
:
url
(
chrome
:
/
/
browser
/
skin
/
warning
.
svg
)
no
-
repeat
center
;
}
:
root
[
lwt
-
popup
-
brighttext
]
.
addon
-
banner
-
item
:
:
after
{
-
moz
-
context
-
properties
:
fill
stroke
;
fill
:
#
FFE900
;
stroke
:
transparent
;
}
/* ... */

